--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Email Tracking website"
     />
+    <meta name="monetag" content="1f22a17e9cffa8a59db8d0568171a14a">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
